--- a/theme.css
+++ b/theme.css
@@ -125,6 +125,7 @@ progress::-webkit-progress-bar {
   border-radius: 15px;
   margin: 1.5mm;
   border-color: rgb(14, 34, 14);
+  color: black;
 }
 
 .more_yes:hover {
@@ -139,6 +140,7 @@ progress::-webkit-progress-bar {
   border-radius: 15px;
   margin: 1.5mm;
   border-color: rgb(14, 34, 14);
+  color: black;
 }
 
 .yes:hover {
@@ -153,6 +155,7 @@ progress::-webkit-progress-bar {
   border-radius: 15px;
   margin: 1.5mm;
   border-color: rgb(14, 34, 14);
+  color: black;
 }
 
 .little_yes:hover {
@@ -167,6 +170,7 @@ progress::-webkit-progress-bar {
   border-radius: 15px;
   margin: 1.5mm;
   border-color: rgb(14, 34, 14);
+  color: black;
 }
 
 .netural:hover {
@@ -181,6 +185,7 @@ progress::-webkit-progress-bar {
   border-radius: 15px;
   margin: 1.5mm;
   border-color: rgb(14, 34, 14);
+  color: black;
 }
 
 .more_no:hover {
@@ -195,6 +200,7 @@ progress::-webkit-progress-bar {
   border-radius: 15px;
   margin: 1.5mm;
   border-color: rgb(14, 34, 14);
+  color: black;
 }
 
 .no:hover {
@@ -209,6 +215,7 @@ progress::-webkit-progress-bar {
   border-radius: 15px;
   margin: 1.5mm;
   border-color: rgb(14, 34, 14);
+  color: black;
 }
 
 .little_no:hover {
@@ -223,6 +230,7 @@ progress::-webkit-progress-bar {
   border-radius: 15px;
   margin: 1.5mm;
   border-color: rgb(14, 34, 14);
+  color: black;
 }
 
 .yes {
@@ -237,6 +245,7 @@ progress::-webkit-progress-bar {
   border-radius: 15px;
   margin: 1.5mm;
   border-color: rgb(14, 34, 14);
+  color: black;
 }
 
 .little_yes {
@@ -251,6 +260,7 @@ progress::-webkit-progress-bar {
   border-radius: 15px;
   margin: 1.5mm;
   border-color: rgb(14, 34, 14);
+  color: black;
 }
 
 .netural {
@@ -265,6 +275,7 @@ progress::-webkit-progress-bar {
   border-radius: 15px;
   margin: 1.5mm;
   border-color: rgb(14, 34, 14);
+  color: black;
 }
 
 .more_no {
@@ -279,6 +290,7 @@ progress::-webkit-progress-bar {
   border-radius: 15px;
   margin: 1.5mm;
   border-color: rgb(14, 34, 14);
+  color: black;
 }
 
 .no {
@@ -293,6 +305,7 @@ progress::-webkit-progress-bar {
   border-radius: 15px;
   margin: 1.5mm;
   border-color: rgb(14, 34, 14);
+  color: black;
 }
 
 .little_no {
@@ -307,6 +320,7 @@ progress::-webkit-progress-bar {
   border-radius: 15px;
   margin: 1.5mm;
   border-color: rgb(14, 34, 14);
+  color: black;
 }
 
 .S_bar {
