--- a/theme.css
+++ b/theme.css
@@ -94,6 +94,7 @@ progress::-webkit-progress-bar {
   padding-top: 0.2cm;
 }
 .q_list_len {
+  text-align: center;
   font-size: 1.5em;
   font-weight: bold;
   margin: 0 auto;
@@ -102,6 +103,7 @@ progress::-webkit-progress-bar {
 }
 
 .result_class {
+  text-align: center;
   font-size: 2em;
   font-weight: bold;
   width: 300px;
@@ -110,6 +112,7 @@ progress::-webkit-progress-bar {
   padding-top: 3mm;
 }
 .trifix_class {
+  text-align: center;
   font-size: 1em;
   font-weight: bold;
   width: 300px;
@@ -119,6 +122,7 @@ progress::-webkit-progress-bar {
 }
 
 .result_text_class {
+  text-align: center;
   font-size: 1em;
   font-weight: bold;
   width: 600px;
@@ -128,6 +132,7 @@ progress::-webkit-progress-bar {
 }
 
 .q_text {
+  text-align: center;
   font-size: 1.5em;
   font-weight: bold;
   width: 600px;
@@ -148,8 +153,8 @@ progress::-webkit-progress-bar {
 .Instincts_answer {
   background-color: rgb(152, 228, 247);
   text-align: center;
-  height: 20%;
-  width: 30%;
+  height: auto;
+  width: 400px;
   font-size: 0.9em;
   font-family: "Microsoft YaHei";
   font-weight: 600;
@@ -163,8 +168,8 @@ progress::-webkit-progress-bar {
 .Igreen_answer {
   background-color: rgb(123, 214, 123);
   text-align: center;
-  height: 20%;
-  width: 30%;
+  height: auto;
+  width: 400px;
   font-size: 0.9em;
   font-family: "Microsoft YaHei";
   font-weight: 600;
@@ -178,8 +183,8 @@ progress::-webkit-progress-bar {
 .Ired_answer {
   background-color: rgb(243, 116, 137);
   text-align: center;
-  height: 20%;
-  width: 30%;
+  height: auto;
+  width: 400px;
   font-size: 0.9em;
   font-family: "Microsoft YaHei";
   font-weight: 600;
@@ -436,153 +441,43 @@ progress::-webkit-progress-bar {
   }
 
   .Instincts_answer:hover {
-    background-color: rgb(152, 228, 247);
-    text-align: center;
-    height: 80px;
-    width: 650px;
-    font-size: 0.9em;
-    font-family: "Microsoft YaHei";
-    font-weight: 600;
-    border-width: 0.1cm;
-    border-radius: 15px;
-    margin: 1.5mm;
-    border-color: rgb(14, 34, 14);
-    color: black;
+    transform: scale(1.2)
   }
 
   .Igreen_answer:hover {
-    background-color: rgb(123, 214, 123);
-    text-align: center;
-    height: 80px;
-    width: 650px;
-    font-size: 0.9em;
-    font-family: "Microsoft YaHei";
-    font-weight: 600;
-    border-width: 0.1cm;
-    border-radius: 15px;
-    margin: 1.5mm;
-    border-color: rgb(14, 34, 14);
-    color: black;
+    transform: scale(1.2)
   }
 
   .Ired_answer:hover {
-    background-color: rgb(243, 116, 137);
-    text-align: center;
-    height: 80px;
-    width: 650px;
-    font-size: 0.9em;
-    font-family: "Microsoft YaHei";
-    font-weight: 600;
-    border-width: 0.1cm;
-    border-radius: 15px;
-    margin: 1.5mm;
-    border-color: rgb(14, 34, 14);
-    color: black;
+    transform: scale(1.2)
   }
 
   .more_yes:hover {
-    background-color: rgba(52, 184, 58, 0.89);
-    text-align: center;
-    height: 60px;
-    width: 450px;
-    font-size: 2.3em;
-    font-family: "Microsoft YaHei";
-    font-weight: 600;
-    border-width: 0.1cm;
-    border-radius: 15px;
-    margin: 1.5mm;
-    border-color: rgb(14, 34, 14);
-    color: black;
+    transform: scale(1.2)
   }
 
   .yes:hover {
-    background-color: rgba(132, 240, 137, 0.89);
-    text-align: center;
-    height: 60px;
-    width: 450px;
-    font-size: 2.3em;
-    font-family: "Microsoft YaHei";
-    font-weight: 600;
-    border-width: 0.1cm;
-    border-radius: 15px;
-    margin: 1.5mm;
-    border-color: rgb(14, 34, 14);
-    color: black;
+    transform: scale(1.2)
   }
 
   .little_yes:hover {
-    background-color: rgba(132, 217, 238, 0.89);
-    text-align: center;
-    height: 60px;
-    width: 450px;
-    font-size: 2.3em;
-    font-family: "Microsoft YaHei";
-    font-weight: 600;
-    border-width: 0.1cm;
-    border-radius: 15px;
-    margin: 1.5mm;
-    border-color: rgb(14, 34, 14);
-    color: black;
+    transform: scale(1.2)
   }
 
   .netural:hover {
-    background-color: rgba(84, 86, 87, 0.89);
-    text-align: center;
-    height: 60px;
-    width: 450px;
-    font-size: 2.3em;
-    font-family: "Microsoft YaHei";
-    font-weight: 600;
-    border-width: 0.1cm;
-    border-radius: 15px;
-    margin: 1.5mm;
-    border-color: rgb(14, 34, 14);
-    color: black;
+    transform: scale(1.2)
   }
 
   .more_no:hover {
-    background-color: rgba(214, 30, 30, 0.89);
-    text-align: center;
-    height: 60px;
-    width: 450px;
-    font-size: 2.3em;
-    font-family: "Microsoft YaHei";
-    font-weight: 600;
-    border-width: 0.1cm;
-    border-radius: 15px;
-    margin: 1.5mm;
-    border-color: rgb(14, 34, 14);
-    color: black;
+    transform: scale(1.2)
   }
   
 .no:hover {
-  background-color: rgba(241, 93, 82, 0.89);
-  text-align: center;
-  height: 60px;
-  width: 450px;
-  font-size: 2.3em;
-  font-family: "Microsoft YaHei";
-  font-weight: 600;
-  border-width: 0.1cm;
-  border-radius: 15px;
-  margin: 1.5mm;
-  border-color: rgb(14, 34, 14);
-  color: black;
+  transform: scale(1.2)
 }
 
 .little_no:hover {
-  background-color: rgba(247, 186, 108, 0.89);
-  text-align: center;
-  height: 60px;
-  width: 450px;
-  font-size: 2.3em;
-  font-family: "Microsoft YaHei";
-  font-weight: 600;
-  border-width: 0.1cm;
-  border-radius: 15px;
-  margin: 1.5mm;
-  border-color: rgb(14, 34, 14);
-  color: black;
+  transform: scale(1.2)
 }
 
 }
