--- a/theme.css
+++ b/theme.css
@@ -71,6 +71,21 @@ progress::-webkit-progress-bar {
   border-color: rgb(14, 34, 14);
 }
 
+.refreshclass {
+  background-color: rgb(70, 209, 151);
+  text-align: center;
+  height: 50px;
+  width: 200px;
+  font-size: 2em;
+  font-family: "Microsoft YaHei";
+  font-weight: 600;
+  border-width: 0.1cm;
+  /* margin-top:0px;
+    margin-right:850px;
+    margin-bottom:0px;
+    margin-left:850px; */
+  border-color: rgb(14, 34, 14);
+}
 
 
 .start_button_mouseover {
@@ -430,6 +445,22 @@ progress::-webkit-progress-bar {
 @media (any-hover: hover) {
   .e_start_button:hover {
     background-color: rgb(137, 67, 170);
+    color: azure;
+    text-align: center;
+    height: 50px;
+    width: 200px;
+    font-size: 2em;
+    font-family: "Microsoft YaHei";
+    font-weight: 600;
+    border-width: 0.1cm;
+    /* margin-top:0px;
+      margin-right:850px;
+      margin-bottom:0px;
+      margin-left:850px; */
+    border-color: rgb(14, 34, 14);
+  }
+  .refreshclass:hover {
+    background-color: rgb(29, 114, 26);
     color: azure;
     text-align: center;
     height: 50px;
