--- a/theme.css
+++ b/theme.css
@@ -91,6 +91,23 @@ progress::-webkit-progress-bar {
   border-color: rgb(14, 34, 14);
   border-radius: 25px;
 }
+.maybe_button {
+  background-color: rgb(252, 250, 250);
+  text-align: center;
+  height: 40px;
+  width: 100px;
+  font-size: 1.5em;
+  font-family: "Microsoft YaHei";
+  font-weight: 600;
+  border-width: 0.1cm;
+  /* margin-top:0px;
+    margin-right:850px;
+    margin-bottom:0px;
+    margin-left:850px; */
+  color: black;
+  border-color: rgb(45, 161, 228);
+  border-radius: 25px;
+}
 
 .refreshclass {
   background-color: rgb(70, 209, 151);
@@ -504,6 +521,24 @@ progress::-webkit-progress-bar {
       margin-bottom:0px;
       margin-left:850px; */
     border-color: rgb(14, 34, 14);
+  }
+
+  .maybe_button:hover {
+    background-color: rgb(252, 250, 250);
+    text-align: center;
+    height: 45px;
+    width: 125px;
+    font-size: 1.5em;
+    font-family: "Microsoft YaHei";
+    font-weight: 600;
+    border-width: 0.1cm;
+    /* margin-top:0px;
+      margin-right:850px;
+      margin-bottom:0px;
+      margin-left:850px; */
+    color: black;
+    border-color: rgb(45, 161, 228);
+    border-radius: 25px;
   }
 
   .Instincts_answer:hover {
