--- a/theme.css
+++ b/theme.css
@@ -56,6 +56,13 @@ progress::-webkit-progress-bar {
   margin-left: 10%;
 }
 
+.start_dec {
+  text-align: center;
+  margin: 0 auto;
+  max-width: 450px;
+  width: 80%;
+}
+
 .start_button {
   background-color: rgb(104, 207, 238);
   text-align: center;
